# xi-no-json

./: Cargo.toml  README.md
src/: config.rs  editor.rs  index_set.rs  layers.rs  lib.rs  linewrap.rs  movement.rs  rpc.rs  selection.rs  styles.rs  syntax.rs  tabs.rs  unicode.rs  view.rs  word_boundaries.rs
src/plugins/: manager.rs  manifest.rs  mod.rs  rpc.rs
src/rope/: breaks.rs  delta.rs  engine.rs  find.rs  mod.rs  multiset.rs  rope.rs  spans.rs  tree.rs
