[package]
name = "xi-core"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/google/xi-editor"

[dependencies]
bytecount = "0.3.1"
memchr = "2.0"
time = "0.1"
toml = "0.4"
lazy_static = "1.0"
notify = { optional = true, version = "4.0" }
syntect = "2.0.0"

[features]
avx-accel = ["bytecount/avx-accel"]
simd-accel = ["bytecount/simd-accel"]
